--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <section id="Micky">
         <center>
             <h1>Mickey Mouse</h1>
-            <img src="https://static.wikia.nocookie.net/disney/images/b/bf/Mickey_Mouse_Disney_1.png/revision/latest?cb=20180813011713"
+            <img src="https://lumiere-a.akamaihd.net/v1/images/ct_mickeymouseandfriends_mickey_ddt-16970_4e99445d.jpeg?region=0,0,600,600"
                 alt="">
             <p>Mickey generally appears alongside his girlfriend Minnie Mouse, his pet dog Pluto, his friends Donald
                 Duck and Goofy, and his nemesis Pete, among others. Though originally characterized as a cheeky lovable
